1.0b9
-----
* Queries can now contain whitespace. Spaces passed as shell
  arguments are now preserved, so you can use your shell's escaping
  syntax to include spaces in queries. For example, typing this:
    beet ls "the knife"
  or this:
    beet ls the\ knife
  now matches the entire phrase. To match in specified fields, use
  a construction like this:
    beet ls "artist:the knife"
* Album art is now automatically discovered and copied from the
  imported directories when available.
* The release label for albums and tracks is now fetched from
  MusicBrainz, written to files, and stored in the database.
* Release year and label are now shown in the candidate selection
  list to help disambiguate different releases of the same album.
* Prompts in the importer interface are now colorized for easy
  reading. The default option is always highlighted.
* The "list" command now accepts a "-p" switch that causes it to show
  paths instead of titles. This makes the output of "beet ls -p"
  suitable for piping into another command such as xargs.
* The importer now provides the option to specify a MusicBrainz ID
  manually if the built-in searching isn't working for a particular
  album or track.
* $bitrate in path formats is now formatted as a human-readable kbps
  value instead of a raw integer.
* The import logger has been improved for "always-on" use. First,
  it is now possible to specify a log file in .beetsconfig. Also,
  logs are now appended rather than overwritten and contain
  timestamps.
* Album art fetching and plugin events are each now run in separate
  pipeline stages during imports. This should bring additional
  performance when using album art plugins like embedart or
  beets-lyrics.
* Accents and other Unicode decorators on characters are now treated
  more fairly by the autotagger. For example, if you're missing the
  acute accent on the "e" in "cafe", that change won't be penalized.